resolve overflowing cart issue

--- a/frontend/src/styles/common/_globals.scss
+++ b/frontend/src/styles/common/_globals.scss
@@ -4,7 +4,7 @@ html {
   box-sizing: border-box;
   background: $secondary-color;
   overflow-y: scroll;
-  margin-left: -20rem;
+  margin-left: -22rem;
 }
 
 button {
