--- a/frontend/src/styles/components/_note.scss
+++ b/frontend/src/styles/components/_note.scss
@@ -9,9 +9,13 @@
   transform: rotate(-17.5deg);
   background: white;
   margin: -275px -225px;
-  right: 15rem;
+  right: 16.5rem;
   top: 25rem;
   box-shadow: 0px 0px 5px 0px #888;
+
+  &.second {
+    top: 50rem;
+  }
 
   img {
     width: 5rem;
@@ -65,7 +69,7 @@
         cursor: pointer;
       }
 
-      &:last-of-type {
+      &.end {
         margin-top: 25px;
         justify-content: flex-end;
         
